Fix scroll bar visibility.
Hide x scroll bar for body and y scroll bar for pillar.

--- a/css/resume.css
+++ b/css/resume.css
@@ -71,6 +71,7 @@ body.resumepage {
     overflow:scroll;
     position:absolute;
     min-width: 100%;
+    overflow-x: hidden;
 }
 
 a {
@@ -229,6 +230,7 @@ a {
     margin-top:0;
     font-size: 14pt;
     font-weight: normal;
+    overflow-y: hidden;
 }
 
 .banner h2 {
